# advent-of-code-2024

./: LICENSE  README.md  pyproject.toml
src/cli/: __init__.py  cli.py
src/cli/days/: day_01.py
tests/: test_day_01.py
