[project]
name = "cli"
version = "0.1.0"
description = "A command line interface that implements Advent of Code 2024 solutions."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.7",
    "polars>=1.16.0",
]

[project.scripts]
happy_holidays = "src.cli.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.4",
]
